spacing fix

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ main,
 .s2,
 .s4 {
 	display: grid;
-	grid-gap: calc(var(--basic-space) * 2);
+	grid-gap: calc(var(--basic-space) * 3);
 	gap: calc(var(--basic-space) * 3);
 }
 
@@ -205,6 +205,10 @@ figcaption {
 
 @media (min-width:50em) {
 
+	body {
+		padding: 0 calc(var(--basic-space) * 3.5);
+	}
+
 	h1 {
 		font-size: 3em;
 	}
@@ -255,6 +259,14 @@ figcaption {
 		--basic-space: var(--max-bs-rem);
 		--font-size: var(--max-fs-rem);
 	}
+
+	main,
+	.s2,
+	.s4 {
+		grid-gap: calc(var(--basic-space) * 2.5);
+		gap: calc(var(--basic-space) * 2.5);
+	}
+
 
 	main {
 		grid-template-columns: repeat(3, 1fr);
